[project]
name = "sd-dynamic-thresholding"
description = "Adds nodes for Dynamic Thresholding, CFG scheduling, and related techniques"
version = "1.0.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/mcmonkeyprojects/sd-dynamic-thresholding"

[tool.comfy]
PublisherId = "mcmonkey"
DisplayName = "Dynamic Thresholding"
Icon = ""
